# pipeline-lib

./: .gitignore  .gitlab-ci.yml  CONTRIBUTIONS.md  Dockerfile  README.md  mypy.ini  pipeline_utils.py  pyproject.toml  renovate.json  test_pipeline_utils.py
.github/workflows/: publish.yml  test-linux.yml
benchmark/: run_benchmark.py
docs/: build.sh  sequential_chain.dot
examples/: image_batch_example.py  pytorch_batcher.py  spreader_gatherer.py
pipeline_executor/: __init__.py  execution.py  mp_execution.py  pipeline_task.py  seq_execution.py  tr_execution.py  type_checking.py
pipeline_lib/: execution.py  mp_execution.py  seq_execution.py  tr_execution.py  type_checking.py
scripts/: format.sh  lint.sh  publish_package.sh  test.sh
test/: example_funcs.py  test_execution.py  test_execution_error.py  test_type_checking.py  test_utils.py
