[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
name = "pipeline_executor"
description = "My package description"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []
[project.optional-dependencies]
dev = [
    "numpy",
    "pytest",
    "pytest-repeat",
    "black",
    "pylint",
    "isort",
    "mypy",
    "colorama",
    "build",
    "twine",
    "psutil",
]

[tool.setuptools.package-data]
pipeline_executor = [
    "py.typed",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline_executor"]
exclude = ["*tests*"]

[tool.black]
target-version = ['py38']
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = [
    "line-too-long", # We use black to control this.
    "missing-function-docstring", # TODO : REMOVE - TEMPORARY DURING INITIAL DEVELOPMENT
    "missing-module-docstring", # TODO : REMOVE - TEMPORARY DURING INITIAL DEVELOPMENT
    "missing-class-docstring", # TODO : REMOVE - TEMPORARY DURING INITIAL DEVELOPMENT
    "fixme", # TODO : REMOVE - TEMPORARY DURING INITIAL DEVELOPMENT
]